--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,38 +1,47 @@
+/* src/App.css */
+
 .App {
+  font-family: Arial, sans-serif;
   text-align: center;
+  margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: #1976D2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  margin-top: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.task-input {
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.task-list {
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list-container {
+  padding: 50px;
+  border-radius: 5px;
+  background-color: #fff;
+  margin-bottom: 20px;
+}
+
+.task-list {
+  width: 100%;
+}
+
+.task-list-item {
+  border: 2px solid #7f9bb7;
+  border-radius: 5px;
+  background-color: #1976D2;
+  box-shadow: 0px 2px 4px #7f9bb7;
+}
+
+.task-input {
+  
+  box-shadow: 0px 2px 4px #7f9bb7;
+  width: calc(35% - 50px);
 }
